bad/for_class_over_bool.example_compiler_output
ERROR
[1mbad/for_class_over_bool.lat:5:13: [1;31merror: [0;1mfor cannot iterate over value of non-array type `boolean`[m
	for (Y x : true) {}
	           [1;32m^[m
